--- a/views/result-personnalise.ejs
+++ b/views/result-personnalise.ejs
@@ -407,6 +407,42 @@
               intersect: false,
               bodyFont: { size: window.innerWidth < 640 ? 10 : 12 },
               titleFont: { size: window.innerWidth < 640 ? 12 : 14 }
+            },
+            annotation: {
+              annotations: {
+                aLine: {
+                  type: 'line',
+                  mode: 'horizontal',
+                  scaleID: 'y1',
+                  value: <%= giniClassification.aMax %>,
+                  borderColor: '#10B981',
+                  borderWidth: 2,
+                  borderDash: [5, 5],
+                  label: {
+                    content: 'Classe A',
+                    enabled: true,
+                    position: 'start',
+                    backgroundColor: 'rgba(16, 185, 129, 0.2)',
+                    font: { size: 10 }
+                  }
+                },
+                bLine: {
+                  type: 'line',
+                  mode: 'horizontal',
+                  scaleID: 'y1',
+                  value: <%= giniClassification.bMax %>,
+                  borderColor: '#F59E0B',
+                  borderWidth: 2,
+                  borderDash: [5, 5],
+                  label: {
+                    content: 'Classe B',
+                    enabled: true,
+                    position: 'start',
+                    backgroundColor: 'rgba(245, 158, 11, 0.2)',
+                    font: { size: 10 }
+                  }
+                }
+              }
             }
           },
           scales: {
